# Blazingly-Fast-Submission

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.sqlx/: query-1b249438b67b82abd751d19b33fa404f6e0f7c684c195e5523113c687232b368.json  query-1d5572cc7f4ffdb1c880631c9c133c3e0c4355eaf1dc7c2e55af495384560613.json  query-2b5d2fa0b7635a9712efafa2f3dced6d35ce2dcca9c67e839d8adb39a48c44be.json  query-51e457f5c14fdff36d8afd5e55a5c956c30ef6372aa8a94a88c58d8c621e1071.json  query-7ff38e7aeb8b4fa6d8173a9b991ac8275c62dd4d0e89c64ff1927d10982067e7.json  query-e8695bf81ece7325ff65b62f7b5bd08584b8f5503c900bdcc0766d761c88eabb.json
migrations/: 20250201102919_create_url_table.sql  20250201111205_porting_tables_to_postgres.sql
src/: error.rs  lib.rs  main.rs  state.rs  tracing.rs
src/db/models/: mod.rs  urls.rs
src/routes/: mod.rs
src/routes/add_url/: mod.rs
